<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hzt.utils</groupId>
    <artifactId>maven-test-project</artifactId>
    <version>1.2</version>
    <packaging>pom</packaging>

    <modules>
        <module>reactive-streams</module>
        <module>only-jdk-content</module>
        <module>other-tests</module>
        <module>servlet-filter</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <coverage.target>50%</coverage.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--        dependencies-->

        <!--        logging-->
        <log4j.version>2.17.1</log4j.version>
        <!--        test-->
        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <mockito.version>4.2.0</mockito.version>
        <awaitility.version>4.1.1</awaitility.version>
        <test-data-generator.version>0.7.11</test-data-generator.version>
        <!--        utils-->
        <commons-beanutils.version>1.9.4</commons-beanutils.version>
        <guava.version>31.0.1-jre</guava.version>
        <streamex.version>0.8.1</streamex.version>
        <!--        reactive-streams-->
        <reactive-streams-tck.version>1.0.3</reactive-streams-tck.version>
        <rxjava.version>3.1.1</rxjava.version>
        <spring-boot-starter-webflux.version>2.6.2</spring-boot-starter-webflux.version>
        <scala.binary.version>2.13</scala.binary.version>
        <akka.version>2.6.16</akka.version>
        <org.hzt-utils.version>0.7.11</org.hzt-utils.version>
        <annotations.version>22.0.0</annotations.version>
        <!--plugins-->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
        <cyclops.version>10.4.0</cyclops.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-bom_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.reactivestreams/reactive-streams-tck -->
            <dependency>
                <groupId>io.reactivex.rxjava3</groupId>
                <artifactId>rxjava</artifactId>
                <version>${rxjava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hzt.utils</groupId>
                <artifactId>test-data-generator</artifactId>
                <version>${test-data-generator.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hzt.utils</groupId>
                <artifactId>core</artifactId>
                <version>${org.hzt-utils.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${annotations.version}</version>
                <scope>compile</scope>
            </dependency>
            <!--        apache dependencies-->
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <!--            be careful updating this version-->
                <!--suppress MavenPackageUpdate -->
                <version>${commons-beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webflux</artifactId>
                <version>${spring-boot-starter-webflux.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>*</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>*</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>one.util</groupId>
                <artifactId>streamex</artifactId>
                <version>${streamex.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oath.cyclops</groupId>
                <artifactId>cyclops</artifactId>
                <version>${cyclops.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Logging Dependencies -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <!-- TEST SCOPE DEPENDENCIES -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!--                https://www.baeldung.com/jacoco -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

        </plugins>

    </build>

</project>
